# Inteliaudit

./: .env.example  .gitignore  .vercelignore  Dockerfile  PRESUPUESTADOR.html  Procfile  README.md  ROADMAP.html  analytics.py  claude.md  deploy-railway.ps1  diff.patch  docker-compose.yml  entrypoint.sh  fix_roadmap.py  main.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  render.yaml  roadmap-server.py  roadmap-state.json  run_backend.ps1  schema.sql  seed.py  seed_demo.py  seed_saas.py  telemetry.py  vercel.json  websocket_manager.py  worker.py
alembic/: env.py
analisis/: __init__.py  ai_auditor.py  ai_provider.py  analiticos.py  bancario.py  claude_analisis.py  conciliacion_fiscal.py  copilot.py  idu.py  ire.py  irnr.py  irp.py  iva.py  plazos.py  rate_limiter.py  retenciones.py  riesgo.py  sifen.py
api/: main.py  validators.py
config/: plans.py  settings.py
db/: __init__.py  base.py  db.py  models.py  schema_saas.sql
informes/: __init__.py  pdf_profesional.py  render.py  word_profesional.py
ingesta/: __init__.py  marangatu.py  parser_hechauka.py  parser_rg90.py  sifen.py
landing/: contrato-procesamiento-datos.html  disclaimer.html  index.html  ley-6380.html  manual-de-usuario.html  og-image-generator.html  politica-de-privacidad.html  privacidad.html  rg-90.html  terminos-de-uso.html  terminos.html  vercel.json
notificaciones/: __init__.py  email.py
papeles/: __init__.py  cedulas.py  hallazgos.py
storage/: adapter.py
tests/: conftest.py  test_analiticos.py  test_api.py  test_auth.py  test_bancario.py  test_conciliacion_fiscal.py  test_iva.py  test_parser_rg90.py  test_plazos.py  test_riesgo.py  test_sifen.py
ui-web/: .env.example  (+9 more)
(+69 files in other folders)
